--- a/src/main/resources/templates/ConsumerGroupDetail.html
+++ b/src/main/resources/templates/ConsumerGroupDetail.html
@@ -471,37 +471,34 @@ License: You must have a valid license purchased only from themeforest(the above
 
 							<!-- begin::Horizontal Menu -->
 							<div class="m-stack__item m-stack__item--middle m-stack__item--fluid">
-								<button class="m-aside-header-menu-mobile-close  m-aside-header-menu-mobile-close--skin-light " id="m_aside_header_menu_mobile_close_btn">
-									<i class="la la-close"></i>
-							</button>
+								<button class="m-aside-header-menu-mobile-close  m-aside-header-menu-mobile-close--skin-light " id="m_aside_header_menu_mobile_close_btn"><i class="la la-close"></i></button>
 								<div id="m_header_menu" class="m-header-menu m-aside-header-menu-mobile m-aside-header-menu-mobile--offcanvas  m-header-menu--skin-dark m-header-menu--submenu-skin-light m-aside-header-menu-mobile--skin-light m-aside-header-menu-mobile--submenu-skin-light ">
 									<ul class="m-menu__nav  m-menu__nav--submenu-arrow ">
-										<li class="m-menu__item " aria-haspopup="true">
-											<a href="index.html" class="m-menu__link ">
+										<li class="m-menu__item  m-menu__item--active " aria-haspopup="true">
+											<a th:href="@{/}" class="m-menu__link ">
 												<span class="m-menu__item-here"></span>
 												<span class="m-menu__link-text">Dashboard</span>
 											</a>
 										</li>
-										<li class="m-menu__item  m-menu__item--active  m-menu__item--submenu m-menu__item--rel" m-menu-submenu-toggle="click" aria-haspopup="true">
+										<li class="m-menu__item  m-menu__item--submenu m-menu__item--rel" m-menu-submenu-toggle="click" aria-haspopup="true">
 											<a href="javascript:;" class="m-menu__link m-menu__toggle" title="Non functional dummy link">
+												<span class="m-menu__item-here"></span>
 												<span
-												 class="m-menu__item-here"></span>
-												 <span class="m-menu__link-text">Actions</span>
-												 <i class="m-menu__hor-arrow la la-angle-down"></i>
-												 <i class="m-menu__ver-arrow la la-angle-right"></i>
+														class="m-menu__link-text">Local Cluster</span>
+												<i class="m-menu__hor-arrow la la-angle-down"></i>
+												<i class="m-menu__ver-arrow la la-angle-right"></i>
 											</a>
 											<div class="m-menu__submenu m-menu__submenu--classic m-menu__submenu--left">
 												<span class="m-menu__arrow m-menu__arrow--adjust"></span>
 												<ul class="m-menu__subnav">
-													<li class="m-menu__item  m-menu__item--active " aria-haspopup="true">
-														<a href="inner.html" class="m-menu__link ">
-															<i class="m-menu__link-icon flaticon-diagram"></i>
-															<span class="m-menu__link-title"> 
-																<span class="m-menu__link-wrap"> 
-																	<span class="m-menu__link-text">Generate Reports</span> 
+													<li class="m-menu__item " aria-haspopup="true">
+														<a href="inner.html" class="m-menu__link "><i class="m-menu__link-icon flaticon-diagram"></i>
+															<span class="m-menu__link-title">
+																<span class="m-menu__link-wrap">
+																	<span class="m-menu__link-text">Brokers</span>
 																	<span class="m-menu__link-badge">
 																		<span class="m-badge m-badge--success">2</span>
-																	</span> 
+																	</span>
 																</span>
 															</span>
 														</a>
@@ -509,60 +506,54 @@ License: You must have a valid license purchased only from themeforest(the above
 													<li class="m-menu__item  m-menu__item--submenu" m-menu-submenu-toggle="hover" m-menu-link-redirect="1" aria-haspopup="true">
 														<a href="javascript:;" class="m-menu__link m-menu__toggle" title="Non functional dummy link">
 															<i class="m-menu__link-icon flaticon-business"></i>
-															<span class="m-menu__link-text">Manage Orders</span>
+															<span class="m-menu__link-text">Topics</span>
 															<i class="m-menu__hor-arrow la la-angle-right"></i>
 															<i class="m-menu__ver-arrow la la-angle-right"></i>
 														</a>
-														<div class="m-menu__submenu m-menu__submenu--classic m-menu__submenu--right">
-															<span class="m-menu__arrow "></span>
-															<ul class="m-menu__subnav">
-																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true">
-																	<a href="inner.html" class="m-menu__link ">
-																		<span class="m-menu__link-text">Latest Orders</span>
-																	</a>
-																</li>
-																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true">
-																	<a href="inner.html" class="m-menu__link ">
-																		<span class="m-menu__link-text">Pending Orders</span>
-																	</a>
-																</li>
-																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true">
-																	<a href="inner.html" class="m-menu__link ">
-																		<span class="m-menu__link-text">Processed Orders</span>
-																	</a>
-																</li>
-																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true">
-																	<a href="inner.html" class="m-menu__link ">
-																		<span class="m-menu__link-text">Delivery Reports</span>
-																	</a>
-																</li>
-																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true">
-																	<a href="inner.html" class="m-menu__link ">
-																		<span class="m-menu__link-text">Payments</span></a></li>
-																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true">
-																	<a href="inner.html" class="m-menu__link ">
-																		<span class="m-menu__link-text">Customers</span></a></li>
-															</ul>
-														</div>
-													</li>
-													<li class="m-menu__item  m-menu__item--submenu" m-menu-submenu-toggle="hover" m-menu-link-redirect="1" aria-haspopup="true"><a href="javascript:;" class="m-menu__link m-menu__toggle" title="Non functional dummy link"><i class="m-menu__link-icon flaticon-chat-1"></i><span
-															 class="m-menu__link-text">Customer Feedbacks</span><i class="m-menu__hor-arrow la la-angle-right"></i><i class="m-menu__ver-arrow la la-angle-right"></i></a>
 														<div class="m-menu__submenu m-menu__submenu--classic m-menu__submenu--right"><span class="m-menu__arrow "></span>
 															<ul class="m-menu__subnav">
-																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true"><a href="inner.html" class="m-menu__link "><span class="m-menu__link-text">Customer Feedbacks</span></a></li>
-																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true"><a href="inner.html" class="m-menu__link "><span class="m-menu__link-text">Supplier Feedbacks</span></a></li>
-																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true"><a href="inner.html" class="m-menu__link "><span class="m-menu__link-text">Reviewed Feedbacks</span></a></li>
-																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true"><a href="inner.html" class="m-menu__link "><span class="m-menu__link-text">Resolved Feedbacks</span></a></li>
-																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true"><a href="inner.html" class="m-menu__link "><span class="m-menu__link-text">Feedback Reports</span></a></li>
+																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true">
+																	<a th:href="@{/topic}" class="m-menu__link ">
+																		<span class="m-menu__link-text">List of Topics</span>
+																	</a>
+																</li>
+																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true">
+																	<a th:href="@{/topic/create}" class="m-menu__link ">
+																		<span class="m-menu__link-text">Create new topic</span>
+																	</a>
+																</li>
 															</ul>
 														</div>
 													</li>
-													<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true"><a href="inner.html" class="m-menu__link "><i class="m-menu__link-icon flaticon-users"></i><span class="m-menu__link-text">Register Member</span></a></li>
+													<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true">
+														<a th:href="@{/group}" class="m-menu__link ">
+															<i class="m-menu__link-icon flaticon-users"></i>
+															<span class="m-menu__link-text">Consumers</span>
+														</a>
+													</li>
+													<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true">
+														<a href="inner.html" class="m-menu__link ">
+															<i class="m-menu__link-icon flaticon-users"></i>
+															<span class="m-menu__link-text">Schema Registry</span>
+														</a>
+													</li>
+													<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true">
+														<a href="inner.html" class="m-menu__link ">
+															<i class="m-menu__link-icon flaticon-users"></i>
+															<span class="m-menu__link-text">Kafka Connect</span>
+														</a>
+													</li>
+													<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true">
+														<a href="inner.html" class="m-menu__link ">
+															<i class="m-menu__link-icon flaticon-users"></i>
+															<span class="m-menu__link-text">ksqlDB</span>
+														</a>
+													</li>
 												</ul>
 											</div>
 										</li>
 										<li class="m-menu__item  m-menu__item--submenu m-menu__item--rel" m-menu-submenu-toggle="click" m-menu-link-redirect="1" aria-haspopup="true"><a href="javascript:;" class="m-menu__link m-menu__toggle" title="Non functional dummy link"><span
-												 class="m-menu__item-here"></span><span class="m-menu__link-text">Reports</span><i class="m-menu__hor-arrow la la-angle-down"></i><i class="m-menu__ver-arrow la la-angle-right"></i></a>
+												class="m-menu__item-here"></span><span class="m-menu__link-text">Reports</span><i class="m-menu__hor-arrow la la-angle-down"></i><i class="m-menu__ver-arrow la la-angle-right"></i></a>
 											<div class="m-menu__submenu  m-menu__submenu--fixed m-menu__submenu--left" style="width:600px"><span class="m-menu__arrow m-menu__arrow--adjust"></span>
 												<div class="m-menu__subnav">
 													<ul class="m-menu__content">
@@ -597,7 +588,7 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 										</li>
 										<li class="m-menu__item  m-menu__item--submenu" m-menu-submenu-toggle="click" m-menu-link-redirect="1" aria-haspopup="true"><a href="javascript:;" class="m-menu__link m-menu__toggle" title="Non functional dummy link"><span class="m-menu__item-here"></span><span
-												 class="m-menu__link-text">Orders</span><i class="m-menu__hor-arrow la la-angle-down"></i><i class="m-menu__ver-arrow la la-angle-right"></i></a>
+												class="m-menu__link-text">Orders</span><i class="m-menu__hor-arrow la la-angle-down"></i><i class="m-menu__ver-arrow la la-angle-right"></i></a>
 											<div class="m-menu__submenu  m-menu__submenu--fixed-xl m-menu__submenu--center"><span class="m-menu__arrow m-menu__arrow--adjust"></span>
 												<div class="m-menu__subnav">
 													<ul class="m-menu__content">
@@ -660,12 +651,12 @@ License: You must have a valid license purchased only from themeforest(the above
 											</div>
 										</li>
 										<li class="m-menu__item  m-menu__item--submenu m-menu__item--rel m-menu__item--more m-menu__item--icon-only" m-menu-submenu-toggle="click" m-menu-link-redirect="1" aria-haspopup="true"><a href="javascript:;" class="m-menu__link m-menu__toggle"
-											 title="Non functional dummy link"><span class="m-menu__item-here"></span><i class="m-menu__link-icon flaticon-more-v3"></i><span class="m-menu__link-text"></span></a>
+																																																									title="Non functional dummy link"><span class="m-menu__item-here"></span><i class="m-menu__link-icon flaticon-more-v3"></i><span class="m-menu__link-text"></span></a>
 											<div class="m-menu__submenu m-menu__submenu--classic m-menu__submenu--left m-menu__submenu--pull"><span class="m-menu__arrow m-menu__arrow--adjust"></span>
 												<ul class="m-menu__subnav">
 													<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true"><a href="inner.html" class="m-menu__link "><i class="m-menu__link-icon flaticon-business"></i><span class="m-menu__link-text">eCommerce</span></a></li>
 													<li class="m-menu__item  m-menu__item--submenu" m-menu-submenu-toggle="hover" m-menu-link-redirect="1" aria-haspopup="true"><a href="crud/datatable_v1.html" class="m-menu__link m-menu__toggle"><i class="m-menu__link-icon flaticon-computer"></i><span
-															 class="m-menu__link-text">Audience</span><i class="m-menu__hor-arrow la la-angle-right"></i><i class="m-menu__ver-arrow la la-angle-right"></i></a>
+															class="m-menu__link-text">Audience</span><i class="m-menu__hor-arrow la la-angle-right"></i><i class="m-menu__ver-arrow la la-angle-right"></i></a>
 														<div class="m-menu__submenu m-menu__submenu--classic m-menu__submenu--right"><span class="m-menu__arrow "></span>
 															<ul class="m-menu__subnav">
 																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true"><a href="inner.html" class="m-menu__link "><i class="m-menu__link-icon flaticon-users"></i><span class="m-menu__link-text">Active Users</span></a></li>
@@ -680,11 +671,11 @@ License: You must have a valid license purchased only from themeforest(the above
 													<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true"><a href="inner.html" class="m-menu__link "><i class="m-menu__link-icon flaticon-graphic-2"></i><span class="m-menu__link-title"> <span class="m-menu__link-wrap">
 																	<span class="m-menu__link-text">Campaigns</span> <span class="m-menu__link-badge"><span class="m-badge m-badge--success">3</span></span> </span></span></a></li>
 													<li class="m-menu__item  m-menu__item--submenu" m-menu-submenu-toggle="hover" m-menu-link-redirect="1" aria-haspopup="true"><a href="javascript:;" class="m-menu__link m-menu__toggle" title="Non functional dummy link"><i class="m-menu__link-icon flaticon-infinity"></i><span
-															 class="m-menu__link-text">Cloud Manager</span><i class="m-menu__hor-arrow la la-angle-right"></i><i class="m-menu__ver-arrow la la-angle-right"></i></a>
+															class="m-menu__link-text">Cloud Manager</span><i class="m-menu__hor-arrow la la-angle-right"></i><i class="m-menu__ver-arrow la la-angle-right"></i></a>
 														<div class="m-menu__submenu m-menu__submenu--classic m-menu__submenu--left"><span class="m-menu__arrow "></span>
 															<ul class="m-menu__subnav">
 																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true"><a href="inner.html" class="m-menu__link "><i class="m-menu__link-icon flaticon-add"></i><span class="m-menu__link-title"> <span class="m-menu__link-wrap"> <span
-																				 class="m-menu__link-text">File Upload</span> <span class="m-menu__link-badge"><span class="m-badge m-badge--danger">3</span></span> </span></span></a></li>
+																		class="m-menu__link-text">File Upload</span> <span class="m-menu__link-badge"><span class="m-badge m-badge--danger">3</span></span> </span></span></a></li>
 																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true"><a href="inner.html" class="m-menu__link "><i class="m-menu__link-icon flaticon-signs-1"></i><span class="m-menu__link-text">File Attributes</span></a></li>
 																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true"><a href="inner.html" class="m-menu__link "><i class="m-menu__link-icon flaticon-folder"></i><span class="m-menu__link-text">Folders</span></a></li>
 																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true"><a href="inner.html" class="m-menu__link "><i class="m-menu__link-icon flaticon-cogwheel-2"></i><span class="m-menu__link-text">System Settings</span></a></li>
@@ -699,6 +690,48 @@ License: You must have a valid license purchased only from themeforest(the above
 							</div>
 
 							<!-- end::Horizontal Menu -->
+
+							<!--begin::Search-->
+							<div class="m-stack__item m-stack__item--middle m-dropdown m-dropdown--arrow m-dropdown--large m-dropdown--mobile-full-width m-dropdown--align-right m-dropdown--skin-light m-header-search m-header-search--expandable m-header-search--skin-" id="m_quicksearch"
+								 m-quicksearch-mode="default">
+
+								<!--begin::Search Form -->
+								<form class="m-header-search__form">
+									<div class="m-header-search__wrapper">
+										<span class="m-header-search__icon-search" id="m_quicksearch_search">
+											<i class="la la-search"></i>
+										</span>
+										<span class="m-header-search__input-wrapper">
+											<input autocomplete="off" type="text" name="q" class="m-header-search__input" value="" placeholder="Search..." id="m_quicksearch_input">
+										</span>
+										<span class="m-header-search__icon-close" id="m_quicksearch_close">
+											<i class="la la-remove"></i>
+										</span>
+										<span class="m-header-search__icon-cancel" id="m_quicksearch_cancel">
+											<i class="la la-remove"></i>
+										</span>
+									</div>
+								</form>
+
+								<!--end::Search Form -->
+
+								<!--begin::Search Results -->
+								<div class="m-dropdown__wrapper">
+									<div class="m-dropdown__arrow m-dropdown__arrow--center"></div>
+									<div class="m-dropdown__inner">
+										<div class="m-dropdown__body">
+											<div class="m-dropdown__scrollable m-scrollable" data-scrollable="true" data-height="300" data-mobile-height="200">
+												<div class="m-dropdown__content m-list-search m-list-search--skin-light">
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+
+								<!--end::Search Results -->
+							</div>
+
+							<!--end::Search-->
 						</div>
 					</div>
 				</div>
@@ -761,7 +794,7 @@ License: You must have a valid license purchased only from themeforest(the above
 											State
 										</span>
 									</div>
-									<div style="padding: 10px 10px; display: flex; gap: 16px; font-weight: 300; padding-top: 10px; align-items: center;" class="m-widget6__item" m-menu-submenu-toggle="click" aria-haspopup="true">
+									<div style="padding: 10px 10px; display: flex; gap: 16px; font-weight: 300; padding-top: 10px; align-items: center; overflow-wrap: anywhere;" class="m-widget6__item" m-menu-submenu-toggle="click" aria-haspopup="true">
 										<span th:text="${group.groupId}" style="max-width: 200px;" class="m-widget6__caption">
 										</span>
 										<div style="max-width: 200px; display: block;" class="m-widget6__caption">
