--- a/src/main/resources/templates/TopicList.html
+++ b/src/main/resources/templates/TopicList.html
@@ -261,7 +261,7 @@ License: You must have a valid license purchased only from themeforest(the above
 									<li class="m-nav__separator">-</li>
 									<li class="m-nav__item">
 										<a th:href="@{/topic}" class="m-nav__link">
-											<span style="color: rgb(46, 8, 100)" class="m-nav__link-text">List of Topics</span>
+											<span style="color: rgb(78, 15, 165);" class="m-nav__link-text">List of Topics</span>
 										</a>
 									</li>
 								</ul>
