--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@ License: You must have a valid license purchased only from themeforest(the above
 	<!-- begin::Head -->
 	<head>
 		<meta charset="utf-8" />
-		<title>Metronic | Dashboard</title>
+		<title>Kafka Admin</title>
 		<meta name="description" content="Latest updates and statistic charts">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
 
@@ -96,146 +96,8 @@ License: You must have a valid license purchased only from themeforest(the above
 		<div class="m-grid m-grid--hor m-grid--root m-page">
 
 			<!-- begin::Header -->
-			<header id="m_header" class="m-grid__item m-header " m-minimize="minimize" m-minimize-offset="200" m-minimize-mobile-offset="200">
-				<div class="m-header__bottom">
-					<div class="m-container m-container--responsive m-container--xxl m-container--full-height m-page__container">
-						<div class="m-stack m-stack--ver m-stack--desktop">
 
-							<!-- begin::Horizontal Menu -->
-							<div class="m-stack__item m-stack__item--middle m-stack__item--fluid">
-								<button class="m-aside-header-menu-mobile-close  m-aside-header-menu-mobile-close--skin-light " id="m_aside_header_menu_mobile_close_btn"><i class="la la-close"></i></button>
-								<div id="m_header_menu" class="m-header-menu m-aside-header-menu-mobile m-aside-header-menu-mobile--offcanvas  m-header-menu--skin-dark m-header-menu--submenu-skin-light m-aside-header-menu-mobile--skin-light m-aside-header-menu-mobile--submenu-skin-light ">
-									<ul class="m-menu__nav  m-menu__nav--submenu-arrow ">
-										<li class="m-menu__item m-menu__item--active" aria-haspopup="true">
-											<a th:href="@{/}" class="m-menu__link ">
-												<span class="m-menu__item-here"></span>
-												<span class="m-menu__link-text">Dashboard</span>
-											</a>
-										</li>
-										<li class="m-menu__item m-menu__item--submenu m-menu__item--rel" m-menu-submenu-toggle="click" aria-haspopup="true">
-											<a href="javascript:;" class="m-menu__link m-menu__toggle" title="Non functional dummy link">
-												<span class="m-menu__item-here"></span>
-												<span class="m-menu__link-text">Local Cluster</span>
-												<i class="m-menu__hor-arrow la la-angle-down"></i>
-												<i class="m-menu__ver-arrow la la-angle-right"></i>
-											</a>
-											<div class="m-menu__submenu m-menu__submenu--classic m-menu__submenu--left">
-												<span class="m-menu__arrow m-menu__arrow--adjust"></span>
-												<ul class="m-menu__subnav">
-													<li class="m-menu__item " aria-haspopup="true">
-														<a href="inner.html" class="m-menu__link "><i class="m-menu__link-icon flaticon-diagram"></i>
-															<span class="m-menu__link-title">
-																<span class="m-menu__link-wrap">
-																	<span class="m-menu__link-text">Brokers</span>
-																	<span class="m-menu__link-badge">
-																		<span class="m-badge m-badge--success">2</span>
-																	</span>
-																</span>
-															</span>
-														</a>
-													</li>
-													<li class="m-menu__item  m-menu__item--submenu" m-menu-submenu-toggle="hover" m-menu-link-redirect="1" aria-haspopup="true">
-														<a href="javascript:;" class="m-menu__link m-menu__toggle" title="Non functional dummy link">
-															<i class="m-menu__link-icon flaticon-business"></i>
-															<span class="m-menu__link-text">Topics</span>
-															<i class="m-menu__hor-arrow la la-angle-right"></i>
-															<i class="m-menu__ver-arrow la la-angle-right"></i>
-														</a>
-														<div class="m-menu__submenu m-menu__submenu--classic m-menu__submenu--right"><span class="m-menu__arrow "></span>
-															<ul class="m-menu__subnav">
-																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true">
-																	<a th:href="@{/topic}" class="m-menu__link ">
-																		<span class="m-menu__link-text">List of Topics</span>
-																	</a>
-																</li>
-																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true">
-																	<a th:href="@{/topic/create}" class="m-menu__link ">
-																		<span class="m-menu__link-text">Create new topic</span>
-																	</a>
-																</li>
-															</ul>
-														</div>
-													</li>
-													<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true">
-														<a th:href="@{/group}" class="m-menu__link ">
-															<i class="m-menu__link-icon flaticon-users"></i>
-															<span class="m-menu__link-text">Consumers</span>
-														</a>
-													</li>
-													<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true">
-														<a href="inner.html" class="m-menu__link ">
-															<i class="m-menu__link-icon flaticon-users"></i>
-															<span class="m-menu__link-text">Schema Registry</span>
-														</a>
-													</li>
-													<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true">
-														<a href="inner.html" class="m-menu__link ">
-															<i class="m-menu__link-icon flaticon-users"></i>
-															<span class="m-menu__link-text">Kafka Connect</span>
-														</a>
-													</li>
-													<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true">
-														<a href="inner.html" class="m-menu__link ">
-															<i class="m-menu__link-icon flaticon-users"></i>
-															<span class="m-menu__link-text">ksqlDB</span>
-														</a>
-													</li>
-												</ul>
-											</div>
-										</li>
-										<li class="m-menu__item  m-menu__item--submenu m-menu__item--rel m-menu__item--more m-menu__item--icon-only" m-menu-submenu-toggle="click" m-menu-link-redirect="1" aria-haspopup="true">
-											<a href="javascript:;" class="m-menu__link m-menu__toggle"
-											   title="Non functional dummy link">
-												<span class="m-menu__item-here"></span>
-												<i class="m-menu__link-icon flaticon-more-v3"></i>
-												<span class="m-menu__link-text"></span>
-											</a>
-											<div class="m-menu__submenu m-menu__submenu--classic m-menu__submenu--left m-menu__submenu--pull">
-												<span class="m-menu__arrow m-menu__arrow--adjust"></span>
-												<ul class="m-menu__subnav">
-													<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true">
-														<a href="inner.html" class="m-menu__link ">
-															<i class="m-menu__link-icon flaticon-business"></i><span class="m-menu__link-text">eCommerce</span></a></li>
-													<li class="m-menu__item  m-menu__item--submenu" m-menu-submenu-toggle="hover" m-menu-link-redirect="1" aria-haspopup="true"><a href="crud/datatable_v1.html" class="m-menu__link m-menu__toggle"><i class="m-menu__link-icon flaticon-computer"></i><span
-															class="m-menu__link-text">Audience</span><i class="m-menu__hor-arrow la la-angle-right"></i><i class="m-menu__ver-arrow la la-angle-right"></i></a>
-														<div class="m-menu__submenu m-menu__submenu--classic m-menu__submenu--right"><span class="m-menu__arrow "></span>
-															<ul class="m-menu__subnav">
-																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true"><a href="inner.html" class="m-menu__link "><i class="m-menu__link-icon flaticon-users"></i><span class="m-menu__link-text">Active Users</span></a></li>
-																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true"><a href="inner.html" class="m-menu__link "><i class="m-menu__link-icon flaticon-interface-1"></i><span class="m-menu__link-text">User Explorer</span></a></li>
-																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true"><a href="inner.html" class="m-menu__link "><i class="m-menu__link-icon flaticon-lifebuoy"></i><span class="m-menu__link-text">Users Flows</span></a></li>
-																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true"><a href="inner.html" class="m-menu__link "><i class="m-menu__link-icon flaticon-graphic-1"></i><span class="m-menu__link-text">Market Segments</span></a></li>
-																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true"><a href="inner.html" class="m-menu__link "><i class="m-menu__link-icon flaticon-graphic"></i><span class="m-menu__link-text">User Reports</span></a></li>
-															</ul>
-														</div>
-													</li>
-													<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true"><a href="inner.html" class="m-menu__link "><i class="m-menu__link-icon flaticon-map"></i><span class="m-menu__link-text">Marketing</span></a></li>
-													<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true"><a href="inner.html" class="m-menu__link "><i class="m-menu__link-icon flaticon-graphic-2"></i><span class="m-menu__link-title"> <span class="m-menu__link-wrap">
-																	<span class="m-menu__link-text">Campaigns</span> <span class="m-menu__link-badge"><span class="m-badge m-badge--success">3</span></span> </span></span></a></li>
-													<li class="m-menu__item  m-menu__item--submenu" m-menu-submenu-toggle="hover" m-menu-link-redirect="1" aria-haspopup="true"><a href="javascript:;" class="m-menu__link m-menu__toggle" title="Non functional dummy link"><i class="m-menu__link-icon flaticon-infinity"></i><span
-															class="m-menu__link-text">Cloud Manager</span><i class="m-menu__hor-arrow la la-angle-right"></i><i class="m-menu__ver-arrow la la-angle-right"></i></a>
-														<div class="m-menu__submenu m-menu__submenu--classic m-menu__submenu--left"><span class="m-menu__arrow "></span>
-															<ul class="m-menu__subnav">
-																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true"><a href="inner.html" class="m-menu__link "><i class="m-menu__link-icon flaticon-add"></i><span class="m-menu__link-title"> <span class="m-menu__link-wrap"> <span
-																		class="m-menu__link-text">File Upload</span> <span class="m-menu__link-badge"><span class="m-badge m-badge--danger">3</span></span> </span></span></a></li>
-																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true"><a href="inner.html" class="m-menu__link "><i class="m-menu__link-icon flaticon-signs-1"></i><span class="m-menu__link-text">File Attributes</span></a></li>
-																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true"><a href="inner.html" class="m-menu__link "><i class="m-menu__link-icon flaticon-folder"></i><span class="m-menu__link-text">Folders</span></a></li>
-																<li class="m-menu__item " m-menu-link-redirect="1" aria-haspopup="true"><a href="inner.html" class="m-menu__link "><i class="m-menu__link-icon flaticon-cogwheel-2"></i><span class="m-menu__link-text">System Settings</span></a></li>
-															</ul>
-														</div>
-													</li>
-												</ul>
-											</div>
-										</li>
-									</ul>
-								</div>
-							</div>
-
-							<!-- end::Horizontal Menu -->
-
-						</div>
-					</div>
-				</div>
-			</header>
+			<div th:replace="~{/components/Header/index :: header(${0})}"></div>
 
 			<!-- end::Header -->
 
